# ml-project-demo

./: README.md  mypy.ini  noxfile.py  pyproject.toml
src/heart_ml/: train.py
