[tool.poetry]
name = "heart_ml"
version = "0.1.0"
description = "Demo homework for RS School Machine Learning course"
authors = ["astraszab <uladzislau_astrashab@epam.com>"]

[tool.poetry.scripts]
train = "heart_ml.train:train"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
